--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <body>
       <div id="container" class="container"></div>
       <div class="buttons">
-         <button>Anterior</button>
-         <button>Siguiente</button>
+         <button id="btnPrevious">Anterior</button>
+         <button id="btnNext">Siguiente</button>
       </div>
       <script src="./js/index.js"></script>
    </body>
