Se personaliza la pagina con botones funcionando

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
       <link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
+      <h1 class="title-principal">Popular Movies</h1>
       <div id="container" class="container"></div>
       <div class="buttons">
-         <button id="btnPrevious">Anterior</button>
-         <button id="btnNext">Siguiente</button>
+         <button id="btnPrevious" class="buttons__pagination buttons__pagination--btn">Anterior</button>
+         <button id="btnNext" class="buttons__pagination buttons__pagination--btn">Siguiente</a></button>
+         <button class="up"><a href="#">Inicio</a></button>
       </div>
+
       <script src="./js/index.js"></script>
    </body>
 </html>
